mule-user-guide/v/3.5/creating-an-oauth-2.0a-web-service-provider.adoc
= Creating an OAuth 2.0a Web Service Provider

The primary responsibility of an OAuth2 Web service provider is to control access to protected resources. Playing the part of both the Authorization server and the Resource server, the OAuth provider module hosts the protected resources and issues tokens to access protected resources without sharing the resource owner's credentials with the client applications. 

The service provider in the link:/mule-user-guide/v/3.5/mule-secure-token-service[OAuth dance] performs the following tasks:

* Provides a login page for resource owners to enter login credentials
* Authenticates clients, both `CONFIDENTIAL` and `PUBLIC`
* Authenticates the resource owner's credentials
* Issues and validates authorization codes
* Provides tokens, which specify the data to which a client may have access (scope)
* Validates tokens, thereby granting access to a protected resource
* Issues refresh tokens to clients

For a detailed explanation of the OAuth dance, see the link:/mule-user-guide/v/3.5/mule-sts-oauth-2.0a-example-application[Mule STS OAuth 2.0a Example Application].

== Assumptions

This topic introduces the idea of Global Elements; if you are unfamiliar with this functionality, access link:/mule-fundamentals/v/3.5/global-elements[Global Elements] to learn more before proceeding. It is assumed that you're familiar with the OAuth dance and http://tools.ietf.org/html/rfc6749[OAuth2 grant types].

== OAuth 2.0a Elements

Mule provides two elements that enable you to configure a Web service provider capable of completing the tasks listed above.

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Element |Description |Studio Visual Editor |XML
|*Global OAuth Element* a|A global element in which you specify most of the configuration settings for the provider, such as login page details, security providers, whether to issue refresh tokens, token lifespan, and supported grant types and scopes. This global element is meant to be referenced by message processors.
|The *Coding Reference* attribute in any OAuth Provider Module Message Processor refers to this. |`<oauth2-provider:config />`
|*Validate* |Configure to validate tokens, confirming that the client presents the correct scopes to access the protected resource. |Add an OAuth Provider Message Processor and set the  `operation` attribute to *Validate* |`<oauth2-provider:validate />`
|===

Because the OAuth provider module message processor only issues tokens to registered clients, Mule also offers two methods for registering clients: 

. You can manually define a list of registered clients during the configuration of your Mule application. 
. You can enable clients to register dynamically in the Mule application.

Note that the OAuth provider module itself does not _generate_ client IDs or secrets. These are generated by another mechanism, for a example a Web page with a form that validates user input, then generates the ID and secret. After generating the ID and secret, this mechanism – the Web page in this example – simply passes the information to the OAuth provider module, which uses the data to keep track of clients registered to use the service.

With respect to registering clients, then, the OAuth provider module is responsible for the following tasks:

* Accepting and storing the client ID
* Accepting and storing the client secret
* Removing, when necessary, a client ID from the clientStore of registered clients _*Version 1.2 only*_
* Revoking access or refresh tokens _*_*Version 1.2 only*_*_

Mule provides three elements to complete the above-listed tasks: 

[cols=",,,",options="header",]
|===
|Element |Description |Studio Visual Editor |XML
|*Create client* |Accepts and stores the client data, including ID, secret, redirection URIs, scopes, and grant types in the clientStore. (the clientStore could be a database or the default persistent object store, depending on your requirements.) |Add an OAuth Provider Message Processor and set the `operation` attribute to *create client*. |`<oauth2-provider:create-client />`
|*Delete Client* – _*Version 1.2 only*_ |Removes clientIDs from the clientStore. |Add an OAuth Provider Message Processor and set the `operation` attribute to *delete client*. |`<oauth2-provider:delete-client />`
|*Revoke Token* – _*Version 1.2 only*_ |Revokes access or refresh tokens, invalidating the corresponding pair as well (i.e. if the message processor revokes the access token, it automatically revokes any refresh token associated with it, and vice versa). |Add an OAuth Provider Message Processor and set the `operation` attribute to *revoke token*
|`<oauth2-provider:revoke-token />`
|===

==== link:/mule-user-guide/v/3.5/creating-an-oauth-2.0a-web-service-provider[Skip to the code]

== Applying OAuth 2.0a to a Web Service Provider

To apply OAuth 2.0a to a Web service that you publish, you must complete, at minimum, five tasks. The first two tasks <<Defining Resources>> which the OAuth Provider elements reference; the last three apply OAuth 2.0a to Mule flows, initiating OAuth2 authentication when a consumer calls the Web service. The table below lists these tasks, along with the Mule elements involved in each task and the OAuth tasks for which each element is responsible.

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|  |Task |Mule Element |OAuth Tasks
|1. |Create a Spring bean to define an authentication manager and provider |Spring bean |Performs client authentication
|2. |Configure a security manager |Mule Security Manager |Delegates client authentication
|3. |Create a Global OAuth 2.0a provider to define several OAuth parameters |Global OAuth provider element |Defines most of the service provider's OAuth 2.0 parameters
|4. |Create a Client Registration flow |OAuth provider module configured to `Create Client` |Stores client IDs and secrets
|5. |Create OAuth Validation flows |OAuth provider module configured to `Validate` or `Validate-client` |Validates the access token, thereby granting, or rejecting, access to a protected resource +
 +
|===

== Paths to Authentication

Before tackling the work of creating an OAuth 2.0a Web service, it is important to understand the various ways in which a service provider can authenticate a client.

When a client calls an OAuth Web service, it must identify itself by one of two types: `PUBLIC` or `CONFIDENTIAL`.

* A *`PUBLIC`* client provides a client ID which the Web service provider uses for authentication
* A *`CONFIDENTIAL`* client provides validation credentials (client ID and client secret) which the Web service provider uses for authentication

If `CONFIDENTIAL`, a client must provide validation credentials in *one* of three different parts of the request:

* In the *query*
* In the *body*
* In the *authentication header* Therefore, you must configure your OAuth 2.0a Web service provider to match the type(s) of client requests you expect to receive. The figure below illustrates the different types of requests and their resulting paths to authentication. +
 +
image:client_validation.png[client_validation]

If the client sends validation credentials in the *body* or the *query* of the request, the OAuth Web service provider simply validates the incoming credentials (client ID and client secret) against the content in the clientStore. If, on the other hand, the client sends validation credentials in the *authentication header* of the request, the service provider uses a security manager to delegate authentication to an *authentication manager*. The authentication manager users an *authentication provider* to validate a client's http://en.wikipedia.org/wiki/Principal_(computer_security)[principals] (username and password, for example).

== Defining Resources

The following procedure describes the steps you need to take in order to define the resources that the OAuth Provider and Global OAuth Provider reference.

To define OAuth provider resources, complete the steps listed below.

. Within your Web service project in Mule, create a *Spring bean* called **`ss-authentication manager`**, in which you define the **`authentication-provider`**. It will essentially be a database of the users that are allowed.
+

[source, xml, linenums]
----
<spring:beans>
        <ss:authentication-manager id="resourceOwnerAuthenticationManager"> 
            <ss:authentication-provider>
                <ss:user-service id="resourceOwnerUserService">
                    <ss:user name="john" password="doe" authorities="RESOURCE_OWNER"/>
                </ss:user-service>
            </ss:authentication-provider>
        </ss:authentication-manager>
</spring:beans>
----

+
[TIP]
Refer to the link:http://docs.spring.io/spring-security/site/docs/3.0.x/reference/springsecurity.html[Spring Security documentation] for different ways of configuring the authentication database.

. Within your Web service project in Mule, create a *security manager* element which references the authentication manager. (In the context of an OAuth Web service, the authentication manager is the security provider.)
+

[source, xml, linenums]
----
<mule-ss:security-manager>
        <mule-ss:delegate-security-provider name="resourceOwnerSecurityProvider" delegate-ref="resourceOwnerAuthenticationManager"/>
    </mule-ss:security-manager>
----

[WARNING]
The OAuth 2.0 provider enables you to configure two security providers: resourceOwnerSecurityProvider and clientSecurityProvider. +
 +
resourceOwnerSecurityProvider authenticates resource owners (eg: when the user credentials are validated after the login page). The only situation where this provider is not required, is when the Grant Type is Client Credentials. +
 +
clientSecurityProvider validates client credentials, it's only needed when a client is confidential AND has a client secret. Whenever the client credentials are sent on the authorization header, you need this provider to delegate the authentication.

== Creating an OAuth Provider Global Element

[NOTE]
A link:/mule-fundamentals/v/3.5/global-elements[Global Element] in Mule is an element that stores common configuration settings. A global element can be referenced by any number of message processors, which in this way use the configuration settings of the global element.

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. Add an *OAuth Provider module* message processor to your Mule project.
. Configure the attributes of the message processor according to the table below the image. The "Required" column indicates that an attribute is required for validating a client app and resource owner. (Refer to example code below.)

+
image:OAuth_provider.png[OAuth_provider]
+
[width="100%",cols="34%,33%,33%",options="header",]
|===
|*Field* |Required |Value
|*Name* |  |A unique name for the global element.
|*Access Token Endpoint Path* |  |Configures the *path* of the access token endpoint required to access resource server. +
Default value: `token`
|*Host* |  |Web service host used for the generated authorization, token and login endpoints. +
Default value: `localhost`
|*Provider Name* |  |Name of the Web service provider. For example, `TweetBook.` This is displayed in the login page.
|*Authorization Ttl Seconds* |  |Lifespan of authorization code in seconds. +
Default value: `600`
|*Port* |  |Port on which the Web service is exposed. The *authorization endpoint* and the *token endpoint* listen on this port. +
Default value: `9999`
|*Client Store Reference* |  |In-memory store that retains OAuth client-specific information. Use this field to reference a specific element that implements the *ClientStore* interface, typically an object store. +
Default value: `in-memory object store` 
|*Authorization Code Store Reference* |  |In-memory store that retains OAuth client-specific information. Use this field to reference a specific element that implements the *AuthorizationCodeStore* interface, typically an object store. +
Default value: `in-memory object store`
|*Token Store Reference* |  |In-memory store that retains OAuth client-specific information. Use this field to reference a specific element that implements the *TokenStore* interface, typically an object store. +
Default value: `in-memory object store`
|*Authorization Endpoint Path* |  |Configures the *path* of the authorization endpoint required to access resource server. +
Default value: `authorize`
|*Login Page* |  |URL for the service provider's end user login page. The resource owner logs into her account from this page. +
Default value: `org/mule/modules/oauth2/provider/www/templates/login.html` 
|*Scopes* |x a|
A space-separated list that defines a set of scopes of data to which to provide access. Consumers may then be limited to access certain scopes only.

Example: `READ_PROFILE WRITE_PROFILE READ_BOOKSHELF WRITE_BOOKSHELF`

|*Token Ttl Seconds* |  |Lifespan of token in seconds. +
Default value: `86400`
|*Connector Reference* |  |A reference to the type of transport, which defaults to HTTP. If your application uses something other than HTTP – Jetty, HTTPS, Servlet – or you have some specific HTTP transport configurations you wish to reference, use this field to reference a specific connector.
|*Resource Owner Security Provider Reference* |x a|
The reference to the authentication server's security provider. For example, `resourceOwnerSecurityProvider` references the Spring security manager (which, in turn, references the authentication manager Spring bean).

If the only configured grant type is Client Credentials, then this field is not required.

|*Client Security Provider Reference* |  |The reference to the security provider that validates client credentials.
|*Supported Grant Types* |  |Space-separated list of authorization grant types that the OAuth Web service provider supports. Specify one of the values listed below.  See the section below for more details. +
`AUTHORIZATION_CODE` (*default*) +
`IMPLICIT` +
`RESOURCE_OWNER_PASSWORD_CREDENTIALS` +
`CLIENT_CREDENTIALS `
|*Rate Limiter Reference* |  |References a package to define limitations for the rate at which a client can call the interface. By default, references `org.mule.modules.oauth2.provider.rateLimit.SimpleInMemmoryRateLimiter`. +
 Use the class to set `maximumFailureCount` (default = 5) and `authResetAfterSeconds` (default = 600).
|*Enable Refresh Token* |  |Set to `TRUE`, this attribute allows Mule to send http://tools.ietf.org/html/draft-ietf-oauth-v2-22#section-1.5[refresh tokens]. +
Default value: `FALSE`
|===
+

[TIP]
URIs for accessing endpoints are be built following the structure below:
`http://localhost:<port>/<path>`

[source, xml, linenums]
----
<oauth2-provider:config
        name="oauth2Provider"
        providerName="TweetBook"
        host="localhost"
        port="${http.port}"
        authorizationEndpointPath="tweetbook/oauth/authorize"
        accessTokenEndpointPath="tweetbook/oauth/token"
        resourceOwnerSecurityProvider-ref="resourceOwnerSecurityProvider"
        scopes="READ_PROFILE WRITE_PROFILE READ_BOOKSHELF WRITE_BOOKSHELF" doc:name="OAuth provider module">
    </oauth2-provider:config>
----
....
[tab,title="XML Editor or Standalone"]
....

. Add a global `oauth2-provider:config` to your Mule application, at the top of your XML config file, outside all flows.
+
[source, xml, linenums]
----
<oauth2-provider:config/>
----
+
Add attributes to the global element according to the table below. The Required column indicates an attribute is required for validating a client app and resource owner. (Refer to example code below.)
+
[source, xml, linenums]
----
<oauth2-provider:config
        name="oauth2Provider"
        providerName="TweetBook"
        host="localhost"
        port="${http.port}"
        authorizationEndpointPath="tweetbook/oauth/authorize"
        accessTokenEndpointPath="tweetbook/oauth/token"
        resourceOwnerSecurityProvider-ref="resourceOwnerSecurityProvider"
        scopes="READ_PROFILE WRITE_PROFILE READ_BOOKSHELF WRITE_BOOKSHELF" doc:name="OAuth provider module">
    </oauth2-provider:config>
----
+
[width="100%",cols="34%,33%,33%",options="header",]
|===
|*Attribute* |Required |Value
|*doc:name* |  |A unique name for the global element.
|*accessTokenEndpointPath* |  |Configures the *path* of the access token endpoint required to access resource server. +
Default value: `token`
|*host* |  |Web service host used for the generated authorization, token and login endpoints. +
Default value: `localhost`
|*providerName* |  |Name of the Web service provider, it is displayed in the log in page. For example, `TweetBook`
|*authorizationTtlSeconds* |  |Lifespan of authorization code in seconds. +
Default value: `600`
|*port* |  |Port on which the Web service is exposed. Both the authorization endpoint and the token endpoint listen on this port. +
Default value: `9999`
|*clientStoreReference* |  |In-memory store that retains OAuth client-specific information. Use this field to reference a specific element that implements the *ClientStore* interface, typically an object store. +
Default value: `persistent object store`
|*authorizationCodeStoreReference* |  |In-memory store that retains OAuth client-specific information. Use this field to reference a specific element that implements the *AuthorizationCodeStore* interface, typically an object store. +
Default value: `persistent object store`
|*tokenStoreReference* |  |In-memory store that retains OAuth client-specific information. Use this field to reference a specific element that implements the *TokenStore* interface, typically an object store. +
Default value: `persistent object store`
|*authorizationEndpointPath* |  |Configures the *path* of the authorization endpoint required to access resource server. +
Default value: `authorize`
|*loginPage* |  |URL for the service provider's end user login page. The resource owner logs into her account from this page. +
Default value: `org/mule/modules/oauth2/provider/www/templates/login.html`
|*scopes* |  a|
A space-separated list that defines a set of scopes of data to which to provide access. Consumers may then be limited to access certain scopes only.

Example: `READ_PROFILE WRITE_PROFILE READ_BOOKSHELF WRITE_BOOKSHELF`

|*tokenTtlSeconds* |  |Lifespan of token in seconds. +
Default value: `86400`
|*connectorReference* |  |A reference to the type of transport, which defaults to HTTP. If your application uses something other than HTTP – Jetty, HTTPS, Servlet – or you have some specific HTTP transport configurations you wish to reference, use this field to reference a specific connector.
|*resourceOwnerSecurityProvider* |  a|
The reference to the authentication server's security provider. For example, `resourceOwnerSecurityProvider` references the Spring security manager (which, in turn, references the authentication manager Spring bean).

If the only configured grant type is Cient Credentials, then this field is not required.

|*clientSecurityProvider* |  |The reference to the security provider that validates client credentials.
|*supportedGrantTypes* |  |Space-separated list of authorization grant types the OAuth Web service provider supports. Specify one of the values listed below. See the section below for more details. +
`AUTHORIZATION_CODE` (*default*) +
`IMPLICIT` +
`RESOURCE_OWNER_PASSWORD_CREDENTIALS` +
`CLIENT_CREDENTIALS` 
|*rateLimiterReference* |  |References a package to define limitations for the rate at which a client can call the interface. By default, references `org.mule.modules.oauth2.provider.rateLimit.SimpleInMemmoryRateLimiter` +
 Use the class to set `maximumFailureCount` (default = 5) and `authResetAfterSeconds` (default = 600).
|*enableRefreshToken* |  |Set to `TRUE`, this attribute allows Mule to send http://tools.ietf.org/html/draft-ietf-oauth-v2-22#section-1.5[refresh tokens]. +
Default value: `FALSE`
|===
+
[TIP]
URIs for accessing endpoints are be built following the structure below:
`http://localhost:<port>/<path>`
....
------

== OAuth Grant Types

OAuth provides four basic grant types that the client can use to validate itself when it requests for a token. Each of these grant types requires a specific configuration of the OAuth Provider Global Element.

[TIP]
If unsure about the difference between each grant type, and when to use each type, you can glean some context from the introduction to the http://tools.ietf.org/html/rfc6749[OAuth2 spec.]

[tabs]
------
[tab,title="Authorization Code"]
....

The *Authorization Code grant type* is meant for general use and is the most secure of all the grant types.

To implement authorization code, clients need to define the following pieces of information:

* Client ID
* Client Secret
* Redirect URL

Below is a simple typical configuration of an oauth2 module with an authorization code client:

[source, xml, linenums]
----
<oauth2-provider:config
        name="oauth2Provider"
        providerName="SampleAPI"
        supportedGrantTypes="AUTHORIZATION_CODE"
        port="8081"
        authorizationEndpointPath="sampleapi/api/authorize"
        accessTokenEndpointPath="sampleapi/api/token"
        resourceOwnerSecurityProvider-ref="resourceOwnerSecurityProvider"
        scopes="READ_RESOURCE POST_RESOURCE" doc:name="OAuth provider module">
            <oauth2-provider:clients>
                <oauth2-provider:client clientId="myclientid" secret="myclientsecret"
                                        type="CONFIDENTIAL" clientName="Mule Bookstore" description="Mule-powered On-line Bookstore">
                    <oauth2-provider:redirect-uris>
                        <oauth2-provider:redirect-uri>http://localhost*</oauth2-provider:redirect-uri>
                    </oauth2-provider:redirect-uris>
                    <oauth2-provider:authorized-grant-types>
                        <oauth2-provider:authorized-grant-type>AUTHORIZATION_CODE</oauth2-provider:authorized-grant-type>
                    </oauth2-provider:authorized-grant-types>
                    <oauth2-provider:scopes>
                        <oauth2-provider:scope>READ_RESOURCE</oauth2-provider:scope>
                        <oauth2-provider:scope>POST_RESOURCE</oauth2-provider:scope>
                    </oauth2-provider:scopes>
                </oauth2-provider:client>
            </oauth2-provider:clients>
    </oauth2-provider:config>
----

*Click to see a full working Mule flow that includes this configuration*

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
 
<mule xmlns:json="http://www.mulesoft.org/schema/mule/json" xmlns:core="http://www.mulesoft.org/schema/mule/core"
xmlns:http="http://www.mulesoft.org/schema/mule/http"
xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.4.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
xmlns:mule-ss="http://www.mulesoft.org/schema/mule/spring-security" xmlns:ss="http://www.springframework.org/schema/security"
xmlns:oauth2-provider="http://www.mulesoft.org/schema/mule/oauth2-provider"
xsi:schemaLocation="http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/json http://www.mulesoft.org/schema/mule/json/current/mule-json.xsd
http://www.mulesoft.org/schema/mule/spring-security http://www.mulesoft.org/schema/mule/spring-security/current/mule-spring-security.xsd
http://www.springframework.org/schema/security http://www.springframework.org/schema/security/spring-security.xsd
http://www.mulesoft.org/schema/mule/oauth2-provider http://www.mulesoft.org/schema/mule/oauth2-provider/current/mule-oauth2-provider.xsd">
 
    <oauth2-provider:config
        name="oauth2ProviderCode"
        providerName="SampleAPI"
        supportedGrantTypes="AUTHORIZATION_CODE"
        port="8081"
        authorizationEndpointPath="sampleapi/api/authorize"
        accessTokenEndpointPath="sampleapi/api/token"
        resourceOwnerSecurityProvider-ref="resourceOwnerSecurityProvider"
        scopes="READ_RESOURCE POST_RESOURCE" doc:name="OAuth provider module">
            <oauth2-provider:clients>
                <oauth2-provider:client clientId="myclientid" secret="myclientsecret"
                                        type="CONFIDENTIAL" clientName="Mule Bookstore" description="Mule-powered On-line Bookstore">
                    <oauth2-provider:redirect-uris>
                        <oauth2-provider:redirect-uri>http://localhost*</oauth2-provider:redirect-uri>
                    </oauth2-provider:redirect-uris>
                    <oauth2-provider:authorized-grant-types>
                        <oauth2-provider:authorized-grant-type>AUTHORIZATION_CODE</oauth2-provider:authorized-grant-type>
                    </oauth2-provider:authorized-grant-types>
                    <oauth2-provider:scopes>
                        <oauth2-provider:scope>READ_RESOURCE</oauth2-provider:scope>
                        <oauth2-provider:scope>POST_RESOURCE</oauth2-provider:scope>
                    </oauth2-provider:scopes>
                </oauth2-provider:client>
            </oauth2-provider:clients>
    </oauth2-provider:config>
     
    <flow name="protected-authcode" doc:name="DemoRestRouterFlow1">
        <http:inbound-endpoint address="http://localhost:8081/resources" doc:name="HTTP"/>
        <oauth2-provider:validate config-ref="oauth2ProviderCode" doc:name="Validate Token" scopes="READ_RESOURCE"/>
        <set-payload value="#[ ['name' : 'payroll', 'uri' : 'http://localhost:8081/resources/payroll'] ]" doc:name="Set Payload"/>
        <json:object-to-json-transformer doc:name="Object to JSON"/>
    </flow>
     
     
    <!-- THIS FLOW IS JUST AN AID TO HELP MANUAL TESTING OF THE OAUTH2 DANCE -->
    <flow name="redirectFlow">
        <http:inbound-endpoint address="http://localhost:8081/redirect" />
        <set-property value="302" propertyName="http.status" doc:name="Property" />
        <set-property propertyName="Location" value="http://localhost:8081/sampleapi/api/token?grant_type=authorization_code&amp;&amp;client_id=myclientid&amp;client_secret=myclientsecret&amp;code=#[message.inboundProperties.code]
     &amp;redirect_uri=http://localhost:8081/redirect" />
    </flow>
     
</mule>
----

In order to test this example, you need to perform an OAuth2 dance with several steps:

. You must first invoke the authorization endpoint with a request that includes the client id, the type of authorization you want to perform, the redirect URL, and the scopes you want to authorize. The structure of the request should look like the URI below:
+
[source, code, linenums]
----
http://localhost:8081/sampleapi/api/authorize?response_type=code&client_id=myclientid&scope=READ_RESOURCE&redirect_uri=http://localhost:8081
----

. This displays the login page in the browser. Once the user has successfully logged in, the provider sends a redirect to the specified `redirect_uri`. This redirect includes additional properties, including an access code.

. You then need to send this code to the token endpoint in a request that also includes the client id, the client secret and some of the information in the previous call, for security reasons. The structure of the request should look like the URI below:
+
[source, code, linenums]
----
http://localhost:8081/sampleapi/api/token?grant_type=authorization_code&client_id=myclientid&client_secret=myclientsecret&code=<use here the access code>&redirect_uri=http://localhost:8081/redirect
----

. If everything works correctly, you get a JSON response like the one below:
+
[source, code, linenums]
----
{
    "scope":"READ_RESOURCE",
    "expires_in":86400,
    "token_type":"bearer",
    "access_token":"huig0RVoGdFoz_mvBaV4ovfjj0Afe8yOAp_v2q0tunevsJVpD2HNRhx8lL6JnMDys7KE3O4TfijknWPzGJZ-NA"
}
----

. You can now include the **`access_token`** in your requests to access to protected resources:
+
[source, code, linenums]
----
http://localhost:8081/resources?access_token=huig0RVoGdFoz_mvBaV4ovfjj0Afe8yOAp_v2q0tunevsJVpD2HNRhx8lL6JnMDys7KE3O4TfijknWPzGJZ-NA
----

....
[tab,title="Implicit"]
....

The *implicit grant type* is not as secure as the authorization code grant type. It is mostly used by Javascript clients and mobile applications. It is simpler than the authorization code in terms of the steps that need to be followed, since the authorization server directly issues an access token instead of an intermediate access code.

Below is a simple typical configuration of an OAuth2 module with an implicit grant client:

[source, xml, linenums]
----
<oauth2-provider:config
        name="oauth2Provider"
        providerName="SampleAPI"
        supportedGrantTypes="IMPLICIT"
        port="8082"
        authorizationEndpointPath="sampleapi/api/authorize"
        accessTokenEndpointPath="sampleapi/api/token"
        resourceOwnerSecurityProvider-ref="resourceOwnerSecurityProvider"
        scopes="READ_RESOURCE POST_RESOURCE" doc:name="OAuth provider module">
            <oauth2-provider:clients>
                <oauth2-provider:client clientId="myclientid2" secret="myclientsecret"
                                        type="CONFIDENTIAL" clientName="Mule Bookstore" description="Mule-powered On-line Bookstore">
                    <oauth2-provider:redirect-uris>
                        <oauth2-provider:redirect-uri>http://localhost*</oauth2-provider:redirect-uri>
                    </oauth2-provider:redirect-uris>
                    <oauth2-provider:authorized-grant-types>
                        <oauth2-provider:authorized-grant-type>TOKEN</oauth2-provider:authorized-grant-type>
                    </oauth2-provider:authorized-grant-types>
                    <oauth2-provider:scopes>
                        <oauth2-provider:scope>READ_RESOURCE</oauth2-provider:scope>
                        <oauth2-provider:scope>POST_RESOURCE</oauth2-provider:scope>
                    </oauth2-provider:scopes>
                </oauth2-provider:client>
            </oauth2-provider:clients>
    </oauth2-provider:config>
----

*Click to see a full working Mule flow that includes this configuration*

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
 
<mule xmlns:json="http://www.mulesoft.org/schema/mule/json" xmlns:core="http://www.mulesoft.org/schema/mule/core"
xmlns:http="http://www.mulesoft.org/schema/mule/http"
xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.4.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
xmlns:mule-ss="http://www.mulesoft.org/schema/mule/spring-security" xmlns:ss="http://www.springframework.org/schema/security"
xmlns:oauth2-provider="http://www.mulesoft.org/schema/mule/oauth2-provider"
xsi:schemaLocation="http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/json http://www.mulesoft.org/schema/mule/json/current/mule-json.xsd
http://www.mulesoft.org/schema/mule/spring-security http://www.mulesoft.org/schema/mule/spring-security/current/mule-spring-security.xsd
http://www.springframework.org/schema/security http://www.springframework.org/schema/security/spring-security.xsd
http://www.mulesoft.org/schema/mule/oauth2-provider http://www.mulesoft.org/schema/mule/oauth2-provider/current/mule-oauth2-provider.xsd">
     
 
    <oauth2-provider:config
        name="oauth2ProviderImplicit"
        providerName="SampleAPI"
        supportedGrantTypes="IMPLICIT"
        port="8082"
        authorizationEndpointPath="sampleapi/api/authorize"
        accessTokenEndpointPath="sampleapi/api/token"
        resourceOwnerSecurityProvider-ref="resourceOwnerSecurityProvider"
        scopes="READ_RESOURCE POST_RESOURCE" doc:name="OAuth provider module">
            <oauth2-provider:clients>
                <oauth2-provider:client clientId="myclientid2" secret="myclientsecret"
                                        type="CONFIDENTIAL" clientName="Mule Bookstore" description="Mule-powered On-line Bookstore">
                    <oauth2-provider:redirect-uris>
                        <oauth2-provider:redirect-uri>http://localhost*</oauth2-provider:redirect-uri>
                    </oauth2-provider:redirect-uris>
                    <oauth2-provider:authorized-grant-types>
                        <oauth2-provider:authorized-grant-type>TOKEN</oauth2-provider:authorized-grant-type>
                    </oauth2-provider:authorized-grant-types>
                    <oauth2-provider:scopes>
                        <oauth2-provider:scope>READ_RESOURCE</oauth2-provider:scope>
                        <oauth2-provider:scope>POST_RESOURCE</oauth2-provider:scope>
                    </oauth2-provider:scopes>
                </oauth2-provider:client>
            </oauth2-provider:clients>
    </oauth2-provider:config>
     
    <flow name="protected-implicit" doc:name="DemoRestRouterFlow1">
        <http:inbound-endpoint address="http://localhost:8082/resources" doc:name="HTTP"/>
        <oauth2-provider:validate config-ref="oauth2ProviderImplicit" doc:name="Validate Token" scopes="READ_RESOURCE"/>
        <set-payload value="#[ ['name' : 'payroll', 'uri' : 'http://localhost:8081/resources/payroll'] ]" doc:name="Set Payload"/>
        <json:object-to-json-transformer doc:name="Object to JSON"/>
    </flow>
     
</mule>
----

In order to test this example, you need to follow the steps of a simplified OAuth dance:

. Invoke the authorization endpoint with a request that includes the client id, the type of authorization you want to perform, the redirect URL, and the scopes you want to authorize. The structure of the request should look like the URI below:
+
[source, code, linenums]
----
http://localhost:8082/sampleapi/api/authorize?response_type=token&client_id=myclientid2&scope=READ_RESOURCE&redirect_uri=http://localhost:8082/re
----

. This displays the login page in the browser. Once the user has successfully logged in, the provider sends a redirect to the specified `redirect_uri`. This redirect already includes the token itself (not just an access code). It should look like this:
+
[source, code, linenums]
----
http://localhost:8082/redirect#access_token=d8gI_X7TLuAmYuZvlt0wx7sq1tnNgI9Ku9DazKAJYWXbB9QNzSTN
----

. You can now include the **`access_token`** in your requests to access to protected resources:
+
[source, code, linenums]
----
http://localhost:8081/resources?access_token=huig0RVoGdFoz_mvBaV4ovfjj0Afe8yOAp_v2q0tunevsJVpD2HNRhx8lL6JnMDys7KE3O4TfijknWPzGJZ-NA
----

....
[tab,title="Resource Owner Password Credentials"]
....

The *resource owner password credentials grant type* is less secure than both the implicit and the authorization code grant types, because the client needs to have the ability to handle the user's credentials. This requires that users have a high degree of trust in the client. This grant type is normally used when the consumer of the protected resource is a widget of the same service, and other similar cases.

Below is a simple typical configuration of an OAuth2 module with resource owner password credentials:

[source, xml, linenums]
----
<oauth2-provider:config
        name="oauth2Provider"
        providerName="SampleAPI"
        supportedGrantTypes="RESOURCE_OWNER_PASSWORD_CREDENTIALS"
        port="8083"
        authorizationEndpointPath="sampleapi/api/authorize"
        accessTokenEndpointPath="sampleapi/api/token"
        resourceOwnerSecurityProvider-ref="resourceOwnerSecurityProvider"
        scopes="READ_RESOURCE POST_RESOURCE" doc:name="OAuth provider module">
            <oauth2-provider:clients>
                <oauth2-provider:client clientId="myclientid3" secret="myclientsecret"
                                        type="CONFIDENTIAL" clientName="Mule Bookstore" description="Mule-powered On-line Bookstore">
                    <oauth2-provider:redirect-uris>
                        <oauth2-provider:redirect-uri>http://localhost*</oauth2-provider:redirect-uri>
                    </oauth2-provider:redirect-uris>
                    <oauth2-provider:authorized-grant-types>
                        <oauth2-provider:authorized-grant-type>PASSWORD</oauth2-provider:authorized-grant-type>
                    </oauth2-provider:authorized-grant-types>
                    <oauth2-provider:scopes>
                        <oauth2-provider:scope>READ_RESOURCE</oauth2-provider:scope>
                        <oauth2-provider:scope>POST_RESOURCE</oauth2-provider:scope>
                    </oauth2-provider:scopes>
                </oauth2-provider:client>
            </oauth2-provider:clients>
    </oauth2-provider:config>
----

*Click to see a full working Mule flow that includes this configuration*

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
 
<mule xmlns:json="http://www.mulesoft.org/schema/mule/json" xmlns:core="http://www.mulesoft.org/schema/mule/core"
xmlns:http="http://www.mulesoft.org/schema/mule/http"
xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.4.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
xmlns:mule-ss="http://www.mulesoft.org/schema/mule/spring-security" xmlns:ss="http://www.springframework.org/schema/security"
xmlns:oauth2-provider="http://www.mulesoft.org/schema/mule/oauth2-provider"
xsi:schemaLocation="http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/json http://www.mulesoft.org/schema/mule/json/current/mule-json.xsd
http://www.mulesoft.org/schema/mule/spring-security http://www.mulesoft.org/schema/mule/spring-security/current/mule-spring-security.xsd
http://www.springframework.org/schema/security http://www.springframework.org/schema/security/spring-security.xsd
http://www.mulesoft.org/schema/mule/oauth2-provider http://www.mulesoft.org/schema/mule/oauth2-provider/current/mule-oauth2-provider.xsd">
     
 
    <oauth2-provider:config
        name="oauth2ProviderRopc"
        providerName="SampleAPI"
        supportedGrantTypes="RESOURCE_OWNER_PASSWORD_CREDENTIALS"
        port="8083"
        authorizationEndpointPath="sampleapi/api/authorize"
        accessTokenEndpointPath="sampleapi/api/token"
        resourceOwnerSecurityProvider-ref="resourceOwnerSecurityProvider"
        scopes="READ_RESOURCE POST_RESOURCE" doc:name="OAuth provider module">
            <oauth2-provider:clients>
                <oauth2-provider:client clientId="myclientid3" secret="myclientsecret"
                                        type="CONFIDENTIAL" clientName="Mule Bookstore" description="Mule-powered On-line Bookstore">
                    <oauth2-provider:redirect-uris>
                        <oauth2-provider:redirect-uri>http://localhost*</oauth2-provider:redirect-uri>
                    </oauth2-provider:redirect-uris>
                    <oauth2-provider:authorized-grant-types>
                        <oauth2-provider:authorized-grant-type>PASSWORD</oauth2-provider:authorized-grant-type>
                        <oauth2-provider:authorized-grant-type>AUTHORIZATION_CODE</oauth2-provider:authorized-grant-type>
                    </oauth2-provider:authorized-grant-types>
                    <oauth2-provider:scopes>
                        <oauth2-provider:scope>READ_RESOURCE</oauth2-provider:scope>
                        <oauth2-provider:scope>POST_RESOURCE</oauth2-provider:scope>
                    </oauth2-provider:scopes>
                </oauth2-provider:client>
            </oauth2-provider:clients>
    </oauth2-provider:config>
     
    <flow name="protected-ropwc" doc:name="DemoRestRouterFlow1">
        <http:inbound-endpoint address="http://localhost:8083/resources" doc:name="HTTP"/>
        <oauth2-provider:validate config-ref="oauth2ProviderRopc" doc:name="Validate Token" scopes="READ_RESOURCE"/>
        <set-payload value="#[ ['name' : 'payroll', 'uri' : 'http://localhost:8081/resources/payroll'] ]" doc:name="Set Payload"/>
        <json:object-to-json-transformer doc:name="Object to JSON"/>
    </flow>
     
</mule>
----

In order to test this example, the process is quite simple:

. Send a POST request to the token endpoint that includes the user name and password. The request should look like the one below:
+
[source, code, linenums]
----
POST /sampleapi/api/token HTTP/1.1
Host: localhost:8083
Cache-Control: no-cache
Content-Type: application/x-www-form-urlencoded
 
grant_type=password&username=john&password=doe&client_id=myclientid3&client_secret=myclientsecret&scope=READ_RESOURCE
----
+
[TIP]
To make this request, use a browser extension such as https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm[Postman] (Google Chrome), or the http://curl.haxx.se/[curl] command line utility.

. If everything works correctly, you will get a JSON response like the one below:
+
[source, code, linenums]
----
{
    "scope": "READ_RESOURCE",
    "expires_in": 86399,
    "token_type": "bearer",
    "access_token": "sgFJ8Y3VPcMOdldrFtCMcWe8VQLdOA8L6pcrqjTYA6L3G9bTIDiOFkiiSC2lmFx-RUKtkzTupW0ugU49hqHhpg"
}
----

. You can now include the **`access_token`** in your requests to access to protected resources:
+
[source, code, linenums]
----
http://localhost:8083/resources?access_token=sgFJ8Y3VPcMOdldrFtCMcWe8VQLdOA8L6pcrqjTYA6L3G9bTIDiOFkiiSC2lmFx-RUKtkzTupW0ugU49hqHhpg
----

....
[tab,title="Client Credentials"]
....

The *client credentials grant type* is the least secure of all the four types defined by the standard. It is generally meant for being used when the client is also resource owner or when an authorization has previosly been arranged with the authorization server. In this grant type an access token may be obtained drectly from the client identifier and the client secret.

Below is a simple typical configuration of an OAuth2 module with client credentials:

[source, xml, linenums]
----
<oauth2-provider:config
        name="oauth2Provider"
        providerName="SampleAPI"
        supportedGrantTypes="CLIENT_CREDENTIALS"
        port="8084"
        authorizationEndpointPath="sampleapi/api/authorize"
        accessTokenEndpointPath="sampleapi/api/token"
        resourceOwnerSecurityProvider-ref="resourceOwnerSecurityProvider"
        scopes="READ_RESOURCE POST_RESOURCE" doc:name="OAuth provider module">
            <oauth2-provider:clients>
                <oauth2-provider:client clientId="myclientid4" secret="myclientsecret"
                                        type="CONFIDENTIAL" clientName="Mule Bookstore" description="Mule-powered On-line Bookstore">
                    <oauth2-provider:redirect-uris>
                        <oauth2-provider:redirect-uri>http://localhost*</oauth2-provider:redirect-uri>
                    </oauth2-provider:redirect-uris>
                    <oauth2-provider:authorized-grant-types>
                        <oauth2-provider:authorized-grant-type>CLIENT_CREDENTIALS</oauth2-provider:authorized-grant-type>
                    </oauth2-provider:authorized-grant-types>
                    <oauth2-provider:scopes>
                        <oauth2-provider:scope>READ_RESOURCE</oauth2-provider:scope>
                        <oauth2-provider:scope>POST_RESOURCE</oauth2-provider:scope>
                    </oauth2-provider:scopes>
                </oauth2-provider:client>
            </oauth2-provider:clients>
    </oauth2-provider:config>
----

*Click to see a full working Mule flow that includes this configuration*

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
 
<mule xmlns:json="http://www.mulesoft.org/schema/mule/json" xmlns:core="http://www.mulesoft.org/schema/mule/core"
xmlns:http="http://www.mulesoft.org/schema/mule/http"
xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.4.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
xmlns:mule-ss="http://www.mulesoft.org/schema/mule/spring-security" xmlns:ss="http://www.springframework.org/schema/security"
xmlns:oauth2-provider="http://www.mulesoft.org/schema/mule/oauth2-provider"
xsi:schemaLocation="http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/json http://www.mulesoft.org/schema/mule/json/current/mule-json.xsd
http://www.mulesoft.org/schema/mule/spring-security http://www.mulesoft.org/schema/mule/spring-security/current/mule-spring-security.xsd
http://www.springframework.org/schema/security http://www.springframework.org/schema/security/spring-security.xsd
http://www.mulesoft.org/schema/mule/oauth2-provider http://www.mulesoft.org/schema/mule/oauth2-provider/current/mule-oauth2-provider.xsd">
     
 
    <oauth2-provider:config
        name="oauth2ProviderClientCreds"
        providerName="SampleAPI"
        supportedGrantTypes="CLIENT_CREDENTIALS"
        port="8084"
        authorizationEndpointPath="sampleapi/api/authorize"
        accessTokenEndpointPath="sampleapi/api/token"
        resourceOwnerSecurityProvider-ref="resourceOwnerSecurityProvider"
        scopes="READ_RESOURCE POST_RESOURCE" doc:name="OAuth provider module">
            <oauth2-provider:clients>
                <oauth2-provider:client clientId="myclientid4" secret="myclientsecret"
                                        type="CONFIDENTIAL" clientName="Mule Bookstore" description="Mule-powered On-line Bookstore">
                    <oauth2-provider:redirect-uris>
                        <oauth2-provider:redirect-uri>http://localhost*</oauth2-provider:redirect-uri>
                    </oauth2-provider:redirect-uris>
                    <oauth2-provider:authorized-grant-types>
                        <oauth2-provider:authorized-grant-type>CLIENT_CREDENTIALS</oauth2-provider:authorized-grant-type>
                    </oauth2-provider:authorized-grant-types>
                    <oauth2-provider:scopes>
                        <oauth2-provider:scope>READ_RESOURCE</oauth2-provider:scope>
                        <oauth2-provider:scope>POST_RESOURCE</oauth2-provider:scope>
                    </oauth2-provider:scopes>
                </oauth2-provider:client>
            </oauth2-provider:clients>
    </oauth2-provider:config>
     
    <flow name="protected-client-creds" doc:name="DemoRestRouterFlow1">
        <http:inbound-endpoint address="http://localhost:8084/resources" doc:name="HTTP"/>
        <oauth2-provider:validate config-ref="oauth2ProviderClientCreds" doc:name="Validate Token" scopes="READ_RESOURCE"/>
        <set-payload value="#[ ['name' : 'payroll', 'uri' : 'http://localhost:8081/resources/payroll'] ]" doc:name="Set Payload"/>
        <json:object-to-json-transformer doc:name="Object to JSON"/>
    </flow>
     
</mule>
----

In order to test this example, the process is quite simple:

. Send a POST request to the token endpoint that includes the user name and password. The request should look like one below:
+
[source, code, linenums]
----
POST /sampleapi/api/token HTTP/1.1
Host: localhost:8084
Cache-Control: no-cache
Content-Type: application/x-www-form-urlencoded
 
grant_type=client_credentials&client_id=myclientid4&client_secret=myclientsecret&scope=READ_RESOURCE
----
+
[TIP]
To make this request use a browser extension such as https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm[Postman] (Google Chrome), or the http://curl.haxx.se/[curl] command line utility.

. If everything works correctly, you should get a JSON response like the one below:
+
[source, code, linenums]
----
{
    "scope": "READ_RESOURCE",
    "expires_in": 86400,
    "token_type": "bearer",
    "access_token": "4juchYVW5ZNNSH_OOU0jxziixjdJ7yhdZTJW5tbi80cJO3oAF-lTD6D05gw2EKA9yxUuOLf-f_oVBX6z0aRI9w"
}
----

. You can now include the **`access_token`** in your requests to access to protected resources:
+
[source, code, linenums]
----
http://localhost:8084/resources?access_token=4juchYVW5ZNNSH_OOU0jxziixjdJ7yhdZTJW5tbi80cJO3oAF-lTD6D05gw2EKA9yxUuOLf-f_oVBX6z0aRI9w
----

....
------

== Creating a Client Registration Flow

Recall that in order to use a Web service protected by OAuth 2.0a, a client must first register with the service. The following procedure describes the steps needed to configure a Mule flow to dynamically accept client registration requests.

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....

. Create a new Mule flow with an inbound connector.
. Use one of three following methods to store client IDs and secrets. +
.. Add an *OAuth provider module* message processor to the flow which will accept and store client IDs and secrets. Configure the element's fields according to the table below.
+
image:oauth1.png[oauth1]
+
[cols=",,",options="header",]
|===
|Field |Required |Value
|*Display Name* |  |Enter a unique name for the global element.
|*Config Reference* |x |Reference the global OAuth provider module element you created above.
|*Operation* |x |*Create client*
|*Client Id* |x |Define where to acquire the client ID. (In the example code below, Mule accesses an object store to validate the `client_ID` and `client_secret`.) Use a Mule expression to dynamically accept this information from clients.
|*Client Name* |  |Identify the client application by name.
|*Description* |  |Offer a brief description of the client application.
|*Principal* |  |Defines a client's http://en.wikipedia.org/wiki/Principal_(computer_security)[principals] (username and password, for example).
|*Secret* |  |Define where to acquire the client secret. +
Not a required attribute if the type is `PUBLIC`.
|*Type* |  |Define the client type (`PUBLIC` or `CONFIDENTIAL`).
|*Strings* |  |Select *Create A List*, then click the image:/docs/s/en_GB/3391/c989735defd8798a9d5e69c058c254be2e5a762b.76/_/images/icons/emoticons/add.png[(plus)] icon to add an `oauth2-provider:authorized-grant-types` child element to the `oauth2-provider:create-client` element in your config. In the dialog, click *Define*, then enter one or more of the following values, separated by spaces: +

`AUTHORIZATION_CODE IMPLICIT RESOURCE_OWNER_PASSWORD_CREDENTIALS CLIENT_CREDENTIALS` 
|*Strings* |  |Select *Create A List*, then click the image:/docs/s/en_GB/3391/c989735defd8798a9d5e69c058c254be2e5a762b.76/_/images/icons/emoticons/add.png[(plus)] icon to add an `oauth2-provider:redirect-uris` child element to the `oauth2-provider:create-client` element in your config. In the dialog, click *Define*, then enter a URI to which the message processor redirects an authorization code. +

During registration, a client indicates which are its valid redirect URIs. When the client later requests an authorization code, it also includes a redirect URI. If the redirect URI included in the request for authorization code is valid (i.e. matches one of the redirect URIs submitted by the client during registration), the message processor directs the authorization code to the specified URI.
|*Strings* |  |Select *Create A List*, then click the image:add.png[(plus)] icon to add an `oauth2-provider:scopes` child element to the `oauth2-provider:create-client` element in your config. In the dialog, click *Define*, then enter a space-separated list of scopes which the client must provide when it uses the service.
|===
+
See the code example below. Notice that Mule creates a default object store, then loads clients' information into that object store.
+
[source, xml, linenums]
----
<oauth2-provider:config
        ...
            <oauth2-provider:clients>
                <oauth2-provider:client clientId="${client_id}" secret="${client_secret}"
                                        type="CONFIDENTIAL" clientName="Mule Bookstore" description="Mule-powered On-line Bookstore">
                    <oauth2-provider:redirect-uris>
                        <oauth2-provider:redirect-uri>http://oauth-consumer.qa.cloudhub.io*</oauth2-provider:redirect-uri>
                    </oauth2-provider:redirect-uris>
                    <oauth2-provider:authorized-grant-types>
                        <oauth2-provider:authorized-grant-type>AUTHORIZATION_CODE</oauth2-provider:authorized-grant-type>
                    </oauth2-provider:authorized-grant-types>
                    <oauth2-provider:scopes>
                        <oauth2-provider:scope>READ_PROFILE</oauth2-provider:scope>
                        <oauth2-provider:scope>READ_BOOKSHELF</oauth2-provider:scope>
                        <oauth2-provider:scope>WRITE_BOOKSHELF</oauth2-provider:scope>
                        <oauth2-provider:scope>WRITE_PROFILE</oauth2-provider:scope>
                    </oauth2-provider:scopes>
                </oauth2-provider:client>
            </oauth2-provider:clients>
    </oauth2-provider:config>
----
+
.. Add a Spring bean and write Java code to be referenced by it, using the default object store. In order to do this you must use the XML Console. In the example code below, the Spring bean invokes the `initialize` method of the `TweetBookInitializer` Java class. Mule generates the value of the default object store, then the Spring bean sets that value on the `clientRegistration `property.
+
[source, xml, linenums]
----
<spring:bean class="org.mule.modules.security.examples.oauth2.TweetBookInitializer"
                     init-method="initialize"
                     p:clientRegistration="#{oauth2Provider.configuration.clientStore}" />
----
+
[source, java, linenums]
----
public class TweetBookInitializer
{
    public static final String BOOKSTORE_CLIENT_ID = "e7aaf348-f08a-11e1-9237-96c6dd6a022f";
    public static final String BOOKSTORE_CLIENT_SECRET = "ee9acaa2-f08a-11e1-bc20-96c6dd6a022f";
 
    private ClientRegistration clientRegistration;
 
    public void initialize()
    {
        final Client bookstoreClient = new Client(BOOKSTORE_CLIENT_ID);
        bookstoreClient.setSecret(BOOKSTORE_CLIENT_SECRET);
        bookstoreClient.setType(ClientType.CONFIDENTIAL);
        bookstoreClient.setClientName("Mule Bookstore");
        bookstoreClient.setDescription("Mule-powered On-line Bookstore");
        bookstoreClient.getAuthorizedGrantTypes().add(RequestGrantType.AUTHORIZATION_CODE);
        bookstoreClient.getRedirectUris().add("http://localhost*");
        bookstoreClient.getScopes().addAll(
            Utils.tokenize("READ_PROFILE READ_BOOKSHELF WRITE_BOOKSHELF WRITE_PROFILE"));
 
        clientRegistration.addClient(bookstoreClient);
    }
 
    public void setClientRegistration(final ClientRegistration clientRegistration)
    {
        this.clientRegistration = clientRegistration;
    }
}
----

.. Create a custom implementation of the object store to store client data, which includes IDs and secrets.
... Create an implementation of the `org.mule.modules.oauth2.provider.client.ClientStore `interface
... In the XML configuration, add a `clientStore-ref` property to the `oauth2-provider:create-client` element. Mule invokes the `getClientById` method of the contract to obtain client IDs and secrets.

....
[tab,title="XML Editor or Standalone"]
....

. Create a new Mule flow with an inbound connector.
. Use one of three following methods to store client IDs and secrets.
.. Add an **`oauth2-provider:client-create`** element to the flow in your Mule application which will accept and store client IDs and secrets. See code example below, notice that Mule creates a default object store, then loads the clients' information into that object store.)
+
[source, xml, linenums]
----
<oauth2-provider:create-client clientId="${client_id}" secret="${client_secret}"
                                        type="CONFIDENTIAL" clientName="Mule Bookstore" description="Mule-powered On-line Bookstore">
    <oauth2-provider:redirect-uris>
    <oauth2-provider:redirect-uri>http://oauth-consumer.qa.cloudhub.io*</oauth2-provider:redirect-uri>
    </oauth2-provider:redirect-uris>
    <oauth2-provider:authorized-grant-types>
        <oauth2-provider:authorized-grant-type>AUTHORIZATION_CODE</oauth2-provider:authorized-grant-type>
    </oauth2-provider:authorized-grant-types>
    <oauth2-provider:scopes>
        <oauth2-provider:scope>READ_PROFILE</oauth2-provider:scope>
        <oauth2-provider:scope>READ_BOOKSHELF</oauth2-provider:scope>
        <oauth2-provider:scope>WRITE_BOOKSHELF</oauth2-provider:scope>
        <oauth2-provider:scope>WRITE_PROFILE</oauth2-provider:scope>
    </oauth2-provider:scopes>
</oauth2-provider:create-client>
----
+
Configure the element's attributes according to the table below:
+
[cols=",,",options="header",]
|===
|Attribute |Required |Value
|*config-ref* |x |Use the name of the new global OAuth provider module element you created above.
|*doc:name* |  |A unique name for the element in the flow.
|*clientId* |x |Define where to acquire the client ID. (In the example code below, Mule access an object store to validate the `client_ID` and `client_secret`.)
|*clientName* |  |Identify the client application.
|*description* |  |Offer a brief description of the client application.
|*secret* |x |Define where to acquire the client secret. +
Not a required attribute if the is `PUBLIC`.
|*type* |x |Define the client type (`PUBLIC` or `CONFIDENTIAL`).
|===
+
Add three child elements to the `oauth2-provider:create-client` element in your config:
+
[width="100%",cols="34%,33%,33%",options="header",]
|===
|Child Element |Attribute |Value
|*oauth2-provider:authorized-grant-types* |ref |Define one or more of the following values, separated by spaces: +
`AUTHORIZATION_CODE IMPLICIT RESOURCE_OWNER_PASSWORD_CREDENTIALSCLIENT_CREDENTIALS `
|*oauth2-provider:redirect-uris* |ref |Identify the URI to which the message processor redirects an authorization code. +
During registration, a client indicates which are its valid redirect URIs. When the client later requests an authorization code, it also includes a redirect URI. If the redirect URI included in the request for authorization code is valid (i.e. matches one of the redirect URIs submitted by the client during registration), the message processor directs the authorization code to the specified URI.
|*oauth2-provider:scopes* |ref |Define a space-separated list of scopes which the client must provide when it uses the service.
|===
+
.. Add a Spring bean and write Java code to be referenced by it, using the default object store. In the example code below, the Spring bean invokes the `initialize` method of the `TweetBookInitializer` Java class. Mule generates the value of the default object store, then the Spring bean sets that value on the `clientRegistration `property.
+
[source, xml, linenums]
----
<spring:bean class="org.mule.modules.security.examples.oauth2.TweetBookInitializer"
                     init-method="initialize"
                     p:clientRegistration="#{oauth2Provider.configuration.clientStore}" />
----
+
[source, java, linenums]
----
public class TweetBookInitializer
{
    public static final String BOOKSTORE_CLIENT_ID = "e7aaf348-f08a-11e1-9237-96c6dd6a022f";
    public static final String BOOKSTORE_CLIENT_SECRET = "ee9acaa2-f08a-11e1-bc20-96c6dd6a022f";
 
    private ClientRegistration clientRegistration;
 
    public void initialize()
    {
        final Client bookstoreClient = new Client(BOOKSTORE_CLIENT_ID);
        bookstoreClient.setSecret(BOOKSTORE_CLIENT_SECRET);
        bookstoreClient.setType(ClientType.CONFIDENTIAL);
        bookstoreClient.setClientName("Mule Bookstore");
        bookstoreClient.setDescription("Mule-powered On-line Bookstore");
        bookstoreClient.getAuthorizedGrantTypes().add(RequestGrantType.AUTHORIZATION_CODE);
        bookstoreClient.getRedirectUris().add("http://localhost*");
        bookstoreClient.getScopes().addAll(
            Utils.tokenize("READ_PROFILE READ_BOOKSHELF WRITE_BOOKSHELF WRITE_PROFILE"));
 
        clientRegistration.addClient(bookstoreClient);
    }
 
    public void setClientRegistration(final ClientRegistration clientRegistration)
    {
        this.clientRegistration = clientRegistration;
    }
}
----
+
.. Create a custom implementation of the object store to store client data, which includes IDs and secrets. +
... Create an implementation of the `org.mule.modules.oauth2.provider.client.ClientStore `interface
... Add a `clientStore-ref` property to the `oauth2-provider:create-client` element. Mule invokes the `getClientById` method of the contract to obtain client IDs and secrets.
....
------

== Disallow Client Access  +
_*Version 1.2 only*_

To prevent an existing client from using the Web service, use a `delete-client` element in a new flow to remove the client ID from the list of registered clients.

[WARNING]
Removing a client ID from the list of registered clients does not automatically revoke tokens related to the clientID. After removing a client from the list, you can wait for the client's existing token – access or refresh – to expire, which thereafter bars them from using the Web service, or you can revoke the tokens manually using the `revoke-token` element (*Revoke Token* message processor in Studio's Visual Editor).

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. Create a new Mule flow that includes an inbound connector.
. Add an *OAuth Provider Module* after the inbound connector.
. Configure the attributes of the OAuth Provider Module according to the table below.

+
image:oauth-deleteclient.png[oauth-deleteclient]
+
[cols=",,",options="header",]
|====
|Field |Required |Value
|*Display Name* |  |Enter a unique name for the global element.
|*Config Reference* |x |Reference the global OAuth provider module element you created above.
|*Operation* |x |*Delete client*
|*Client Id* |x |Define where to acquire the client ID. Use a Mule expression to dynamically accept this information from clients.
|====
. Optionally, add a second *OAuth Provider Module* after the first one to revoke tokens from a client, immediately barring them from using the Web service. Then configure the attributes as per the table below. +

+
image:oauth-deletetokens.png[oauth-deletetokens]
+
[cols=",,",options="header",]
|====
|Field |Required |Value
|*Display Name* |  |Enter a unique name for the global element.
|*Config Reference* |x |Reference the global OAuth provider module element you created above.
|*Operation* |x |*Revoke token*
|*Client Id* |x |Define where to acquire the token. Use a Mule expression to dynamically accept this information from clients.
|====
....
[tab,title="XML Editor"]
....
. Create a new Mule flow that includes an inbound connector.
. Add an `oauth2-provider:delete-client` element after the inbound connector.
. Configure a single attribute of the `delete-client` element according to the table below.
+
[cols=",,",options="header",]
|===
|Attribute |Required |Value
|*clientId* |x |Define the client ID to be removed from the list. See code example below.
|===
+

[source, xml, linenums]
----
<oauth2-provider:delete-client clientId="#[message.inboundProperties.clientId]"/> 
----

. Optionally, add an `oauth2-provider:revoke-token` element to the flow to revoke tokens from a client, immediately barring them from using the Web service. Add the `revoke-token` message processor _after_ the `delete-client` message processor, then configure the attributes as per the table below. +

[cols=",,",options="header",]
|===
|Attribute |Required |Value
|*token* |x |A Mule expression indicating the access token to be revoked. Note that by revoking a client's access token, Mule also revokes any refresh tokens associated with the client, and vice versa. See code example below.
|===

[source, xml, linenums]
----
<oauth2-provider:revoke-token token="#[message.inboundProperties.access_token]"/> 
----
....
------

=== Full Code Example of User Registration and Deletion

[WARNING]
Note that if you copy this code into an editor, there are several fields that need to be completed with implementation-specific data.

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
 
<mule xmlns:oauth2-provider="http://www.mulesoft.org/schema/mule/oauth2-provider" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.4.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/oauth2-provider http://www.mulesoft.org/schema/mule/oauth2-provider/1.2/mule-oauth2-provider.xsd">
     
     
    <spring:bean id="clientsObjectStore" class="org.mule.util.store.InMemoryObjectStore" init-method="initialise" destroy-method="dispose" />
     
    <spring:bean name="clientStore"  class="org.mule.modules.oauth2.provider.client.ObjectStoreClientStore">
        <spring:property name="objectStore" ref="clientsObjectStore" />
    </spring:bean>
     
    <!-- sample for token store -->   
    <!--
    <spring:bean name="tokenStore" class="org.mule.modules.oauth2.provider.token.ObjectStoreTokenStore">
        <spring:property name="refreshTokenObjectStore" ref="clientsObjectStore" />
        <spring:property name="accessTokenObjectStore" ref="clientsObjectStore" />
    </spring:bean>
     -->
      
    <oauth2-provider:config
        name="oauth2ProviderRegister"
        providerName="SampleAPI"
        supportedGrantTypes="IMPLICIT"
        port="8085"
        clientStore-ref="clientStore"
        authorizationEndpointPath="sampleapi/api/authorize"
        accessTokenEndpointPath="sampleapi/api/token"
        resourceOwnerSecurityProvider-ref="resourceOwnerSecurityProvider"
        scopes="READ_RESOURCE POST_RESOURCE" doc:name="OAuth provider module" />
     
     
    <!-- sample flow for registering a client -->
    <flow name="register-clientsFlow1" doc:name="register-clientsFlow1">
        <http:inbound-endpoint exchange-pattern="request-response" host="localhost" port="8085" path="register" doc:name="HTTP"/>
        <oauth2-provider:create-client config-ref="oauth2ProviderRegister" clientId="#[message.inboundProperties.clientId]" clientName="#[message.inboundProperties.clientName]" secret="#[message.inboundProperties.secret]" doc:name="OAuth provider module">
            <oauth2-provider:redirect-uris>
                <oauth2-provider:redirect-uri>http://localhost*</oauth2-provider:redirect-uri>
            </oauth2-provider:redirect-uris>
            <oauth2-provider:authorized-grant-types>
                <oauth2-provider:authorized-grant-type>AUTHORIZATION_CODE</oauth2-provider:authorized-grant-type>
            </oauth2-provider:authorized-grant-types>
            <oauth2-provider:scopes>
                <oauth2-provider:scope>READ_RESOURCE</oauth2-provider:scope>
                <oauth2-provider:scope>POST_RESOURCE</oauth2-provider:scope>
            </oauth2-provider:scopes>
        </oauth2-provider:create-client>
    </flow>
     
    <!-- sample flow for revoking a client -->
    <flow name="unregister-clientsFlow1" doc:name="unregister-clientsFlow1">
        <http:inbound-endpoint exchange-pattern="request-response" host="localhost" port="8085" path="unregister" doc:name="HTTP"/>
        <oauth2-provider:delete-client config-ref="oauth2ProviderRegister" clientId="#[message.inboundProperties.clientId]" />
    </flow>
</mule>
----

== Creating OAuth Validation Flows

The following procedure describes the steps to configure Mule flows to accept requests for protected resources. You can create a flow that allows a client app to access just one scope of a protected resource, or multiple scopes of a protected resource. (In our link:/mule-user-guide/v/3.5/mule-sts-oauth-2.0a-example-application[example application] — see code below — Mule uses two flows with OAuth provider modules: one to enable clients to access the `READ_PROFILE` scope, one to enable clients to access the `READ_BOOKSHELF` scope.)

A validation flow must contain an *OAuth provider module* message processor which defines a few of the attributes required for an OAuth 2.0a Web service provider. Generally speaking, however, the OAuth Provider message processor in a flow behaves more like a placeholder, referencing the *OAuth provider global element* for the bulk of its processing instructions.

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. Create a new Mule flow that includes an inbound connector and a connection to a protected resource.
. To this Mule flow, add an *OAuth2 provider* *module* message processor _before_ the point in the flow at which Mule accesses the protected resource. In other words, set the OAuth2 provider module message processor before Mule calls a database or another service to access the resource owner's private, secure data.
. Configure the attributes of the OAuth2 provider module according to the table below.

image:oauth2.png[oauth2]

image:oauth3.png[oauth3]

[cols=",",options="header"]
|===
|Field |Required |Value
|*Display Name* | |Enter a unique name for the message processor in your flow.
|*Config Reference* |x |Use the name of the new global OAuth provider module element you created above.
|*Operation* |x |Set to *validate* for link:/mule-user-guide/v/3.5/authorization-grant-types[authorization grant types] that utilize "three-legged OAuth" (Authorization Code, Implicit, and Resource Owner Password Credentials). +
 +
Set to *validate-client* to check that the provided client credentials are valid.
|*Resource Owner Roles* | |Specifies resource owner roles Mule enforces when validating a token.
|*Scopes* | |Specifies the scopes of data to which the client app will have access.
|*Throw Exception On Unaccepted* |x |_*Version 1.2 only*_ +
When set to `FALSE` , if the message processor encounters an invalid token, it performs two actions: it returns an HTTP `FORBIDDEN` 403 error, then stops the flow. +
 +
When set to `TRUE`, if the message processor encounters an invalid token which Mule can manage with an exception strategy, it throwns an `InvalidAccessTokenException`. +
 +
Default value: `FALSE`.
|===

[source, xml, linenums]
----
<flow name="publicProfile" doc:name="publicProfile">
        <http:inbound-endpoint address="http://localhost:8084/tweetbook/api/profile" exchange-pattern="request-response" doc:name="Profile API"/>
        <oauth2-provider:validate scopes="READ_PROFILE" config-ref="oauth2Provider" doc:name="OAuth provider module"/>
        <component class="org.mule.security.examples.oauth2.ProfileLookupComponent" doc:name="Profile Lookup"/>
    </flow>
 
    <flow name="publicBookshelf" doc:name="publicBookshelf">
        <http:inbound-endpoint address="http://localhost:8084/tweetbook/api/bookshelf" exchange-pattern="request-response" doc:name="Bookshelf API"/>
        <oauth2-provider:validate scopes="READ_BOOKSHELF" config-ref="oauth2Provider" doc:name="OAuth provider module"/>
        <set-payload value="The Lord of the Rings,The Hitchhiker's Guide to the Galaxy" doc:name="Retrieve Bookshelf"/>
    </flow>
----

....
[tab,title="XML Editor or Standalone"]
....

. Create a new Mule flow that includes an inbound connector and a connection to a protected resource.
. To this Mule flow, add an `oauth2-provider:validate` element or `oauth2-provider:validate-client `element _before_ the point in the flow at which Mule accesses the protected resource. In other words, set the element before Mule calls a database or another service to access the resource owner's private, secure data. +
* `validate`: for link:/mule-user-guide/v/3.5/authorization-grant-types[authorization grant types] that utilize "three-legged OAuth" (Authorization Code, Implicit, and Resource Owner Password Credentials)
* `validate-client`: to check that the provided client credentials are valid.
. Configure the attributes of the `oauth2-provider` element as per the table below.
+
[source, xml, linenums]
----
<flow name="publicProfile" doc:name="publicProfile">
        <http:inbound-endpoint address="http://localhost:8084/tweetbook/api/profile" exchange-pattern="request-response" doc:name="Profile API"/>
        <oauth2-provider:validate scopes="READ_PROFILE" config-ref="oauth2Provider" doc:name="OAuth provider module"/>
        <component class="org.mule.security.examples.oauth2.ProfileLookupComponent" doc:name="Profile Lookup"/>
    </flow>
 
    <flow name="publicBookshelf" doc:name="publicBookshelf">
        <http:inbound-endpoint address="http://localhost:8084/tweetbook/api/bookshelf" exchange-pattern="request-response" doc:name="Bookshelf API"/>
        <oauth2-provider:validate scopes="READ_BOOKSHELF" config-ref="oauth2Provider" doc:name="OAuth provider module"/>
        <set-payload value="The Lord of the Rings,The Hitchhiker's Guide to the Galaxy" doc:name="Retrieve Bookshelf"/>
    </flow>
----

[width="100%",cols="34%,33%,33%",options="header",]
|===
|Attribute |Required |Value
|*config-ref* |x |Use the name of the new global OAuth provider module element you created above.
|*doc:name* |  |A unique name for the element in the flow.
|*resourceOwnerRoles* |  |Specifies resource owner roles Mule enforces when validating a token.
|*scopes* |  |Specifies the scopes of data to which the client app will have access.
|*throwExceptionOnUnaccepted* |x a|
_*Version 1.2 only*_ +
When set to `FALSE` , if the message processor encounters an invalid token, it performs two actions: it returns an HTTP `FORBIDDEN` 403 error, then stops the flow. +

When set to `TRUE`, if the message processor encounters an invalid token which Mule can manage with an exception strategy, it throwns an `InvalidAccessTokenException`.
|===

....
------

== Persisting Object Stores

The Oauth2 provider enables you to specify the implementation of the object stores where the clients, the tokens and the refresh tokens are stored. Here is a sample configuration on how to do this with the client store.

[source, xml, linenums]
----
<spring:bean id="clientsObjectStore" class="org.mule.util.store.InMemoryObjectStore" init-method="initialise" destroy-method="dispose" />
     
    <spring:bean name="clientStore"  class="org.mule.modules.oauth2.provider.client.ObjectStoreClientStore">
        <spring:property name="objectStore" ref="clientsObjectStore" />
    </spring:bean>
     
    <oauth2-provider:config
        name="oauth2ProviderRegister"
        providerName="SampleAPI"
        supportedGrantTypes="IMPLICIT"
        port="8085"
        clientStore-ref="clientStore"
        authorizationEndpointPath="sampleapi/api/authorize"
        accessTokenEndpointPath="sampleapi/api/token"
        resourceOwnerSecurityProvider-ref="resourceOwnerSecurityProvider"
        scopes="READ_RESOURCE POST_RESOURCE" doc:name="OAuth provider module" />
----

You may use the JDBC Transport or the Mongo DB transport for database-backed client object stores. Similarly, you may define settings for storing the access tokens and the refresh tokens:

[source, xml, linenums]
----
<spring:bean name="tokenStore" class="org.mule.modules.oauth2.provider.token.ObjectStoreTokenStore">
        <spring:property name="refreshTokenObjectStore" ref="refreshTokenObjectStore" />
        <spring:property name="accessTokenObjectStore" ref="accessTokenObjectStore" />
    </spring:bean>
----

If you do this, you then need to reference these in the `oauth2-provider`:

[source, xml, linenums]
----
<oauth2-provider:config
        name="oauth2ProviderRegister"
        providerName="SampleAPI"
        supportedGrantTypes="IMPLICIT"
        port="8085"
        tokenStore-ref="tokenStore"
        authorizationEndpointPath="sampleapi/api/authorize"
        accessTokenEndpointPath="sampleapi/api/token"
        resourceOwnerSecurityProvider-ref="resourceOwnerSecurityProvider"
        scopes="READ_RESOURCE POST_RESOURCE" doc:name="OAuth provider module" />
----

== See Also

* Read the http://tools.ietf.org/html/rfc6749[OAuth2 specs] to understand Grant Types better.
* How to use OAuth with Mule as an link:/mule-user-guide/v/3.5/using-a-connector-to-access-an-oauth-api[OAuth Consumer].
